--- a/reactNativeDocs/app.json
+++ b/reactNativeDocs/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "reactNativeDocs",
-    "slug": "reactNativeDocs",
+    "name": "rn-project",
+    "slug": "rn-project",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -23,7 +23,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.hyuna.rnproject"
     },
     "web": {
       "favicon": "./assets/favicon.png"
