--- a/reactNativeDocs/package.json
+++ b/reactNativeDocs/package.json
@@ -17,8 +17,10 @@
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-markdown": "^5.0.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "^1.10.1",
+    "react-native-markdown-package": "^1.8.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
