--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
     "react-native-svg": "^12.1.0",
+    "react-native-svg-transformer": "^0.14.3",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.2.1"
   },
