--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-native-screens": "^2.17.1",
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "^0.16.3",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
