add svg transformer

--- a/app.json
+++ b/app.json
@@ -6,7 +6,8 @@
     "orientation": "portrait",
     "packagerOpts": {
       "config": "metro.config.js",
-      "sourceExts": ["js", "jsx", "svg"]
+      "sourceExts": ["js", "jsx", "svg"],
+      "transformer": "node_modules/react-native-svg-transformer/index.js"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
